spacebattle game works

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
   </head>
   <body>
-    <h1>WOOHOO! SPACE BATTLE!</h1>
+    <div id="game">
+      <button onclick="myGame()"><span>TAKE ME TO SPACE!</span></button>
+    </div>
   </body>
 </html>
